--- a/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko.csproj
+++ b/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko.csproj
@@ -182,6 +182,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BDController.cs" />
+    <Compile Include="Controllers\GenzController.cs" />
+    <Compile Include="Controllers\KMDController.cs" />
+    <Compile Include="Controllers\KDController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -247,6 +251,10 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="BD.R" />
+    <Content Include="KD.R" />
+    <Content Include="KMD.R" />
+    <Content Include="Genz.R" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
